--- a/src/client/client.fxml
+++ b/src/client/client.fxml
@@ -1,31 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ClientController">
+<AnchorPane prefHeight="0.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ClientController">
    <children>
-      <SplitPane prefHeight="411.0" prefWidth="141.0">
-         <items>
-            <ScrollPane prefHeight="200.0" prefWidth="200.0">
-               <content>
-                  <ListView prefHeight="409.0" prefWidth="139.0" />
-               </content>
-            </ScrollPane>
-         </items></SplitPane>
-      <TabPane layoutX="141.0" prefHeight="411.0" prefWidth="458.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="Untitled Tab 1">
-               <content>
-                  <ListView prefHeight="200.0" prefWidth="200.0" />
-               </content>
-            </Tab>
-          <Tab text="Untitled Tab 2" />
-        </tabs>
-      </TabPane>
+      <TextArea id="messagesTextBox" prefHeight="200.0" prefWidth="200.0" />
+      <Button alignment="CENTER" layoutY="200.0" mnemonicParsing="false" onAction="#SendMessageClicked" text="Button" />
    </children>
 </AnchorPane>
