--- a/src/client/client.fxml
+++ b/src/client/client.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="0.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ClientController">
+<AnchorPane prefHeight="544.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ClientController">
    <children>
-      <TextArea id="messagesTextBox" prefHeight="200.0" prefWidth="200.0" />
-      <Button alignment="CENTER" layoutY="200.0" mnemonicParsing="false" onAction="#SendMessageClicked" text="Button" />
+      <Button alignment="CENTER" layoutX="397.0" layoutY="504.0" mnemonicParsing="false" onAction="#SendMessageClicked" text="Button" />
+      <ListView id="contactsList" layoutX="14.0" layoutY="14.0" prefHeight="391.0" prefWidth="134.0" />
+      <TextArea fx:id="messageList" layoutX="14.0" layoutY="412.0" prefHeight="88.0" prefWidth="452.0" />
    </children>
 </AnchorPane>
