--- a/src/client/client.fxml
+++ b/src/client/client.fxml
@@ -8,7 +8,7 @@
 <AnchorPane prefHeight="544.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ClientController">
    <children>
       <Button alignment="CENTER" layoutX="397.0" layoutY="504.0" mnemonicParsing="false" onAction="#SendMessageClicked" text="Button" />
-      <ListView id="contactsList" layoutX="14.0" layoutY="14.0" prefHeight="391.0" prefWidth="134.0" />
+      <ListView fx:id="contactsList" layoutX="14.0" layoutY="14.0" prefHeight="391.0" prefWidth="134.0" />
       <TextArea fx:id="messageList" layoutX="14.0" layoutY="412.0" prefHeight="88.0" prefWidth="452.0" />
    </children>
 </AnchorPane>
