--- a/src/client/login.fxml
+++ b/src/client/login.fxml
@@ -8,7 +8,7 @@
 <AnchorPane prefHeight="82.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.LoginController">
    <children>
       <TextField layoutX="14.0" layoutY="40.0" prefHeight="26.0" prefWidth="187.0" />
-      <Button layoutX="201.0" layoutY="40.0" mnemonicParsing="false" text="Connect" />
+      <Button fx:id="_connectButton" layoutX="201.0" layoutY="40.0" mnemonicParsing="false" onAction="#ConnectToServer" text="Connect" />
       <Label layoutX="14.0" layoutY="14.0" text="Please enter your nickname:" />
    </children>
 </AnchorPane>
