--- a/src/client/mainWindow/client.fxml
+++ b/src/client/mainWindow/client.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="544.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ClientController">
+<AnchorPane prefHeight="544.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.mainWindow.ClientController">
    <children>
       <Button alignment="CENTER" layoutX="397.0" layoutY="504.0" mnemonicParsing="false" onAction="#SendMessageClicked" text="Button" />
       <ListView fx:id="contactsList" layoutX="14.0" layoutY="14.0" prefHeight="391.0" prefWidth="134.0" />
