--- a/src/client/login/login.fxml
+++ b/src/client/login/login.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="82.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.login.LoginController">
+<AnchorPane prefHeight="82.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/8.0.191" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.login.LoginController">
    <children>
-      <TextField layoutX="14.0" layoutY="40.0" prefHeight="26.0" prefWidth="187.0" />
-      <Button fx:id="_connectButton" layoutX="201.0" layoutY="40.0" mnemonicParsing="false" onAction="#ConnectToServer" text="Connect" />
+      <TextField fx:id="_loginTextField" layoutX="14.0" layoutY="40.0" prefHeight="26.0" prefWidth="187.0" />
+      <Button fx:id="_connectButton" defaultButton="true" layoutX="201.0" layoutY="40.0" mnemonicParsing="false" onAction="#ConnectToServer" text="Connect" />
       <Label layoutX="14.0" layoutY="14.0" text="Please enter your nickname:" />
    </children>
 </AnchorPane>
