--- a/src/client/mainWindow/client.fxml
+++ b/src/client/mainWindow/client.fxml
@@ -2,13 +2,15 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="544.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.mainWindow.ClientController">
+<AnchorPane prefHeight="544.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.191" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.mainWindow.ClientController">
    <children>
       <Button alignment="CENTER" layoutX="397.0" layoutY="504.0" mnemonicParsing="false" onAction="#SendMessageClicked" text="Button" />
-      <ListView fx:id="contactsList" layoutX="14.0" layoutY="14.0" prefHeight="391.0" prefWidth="134.0" />
+      <ListView fx:id="contactsList" layoutX="14.0" layoutY="14.0" onMouseClicked="#ListViewMouseClicked" prefHeight="391.0" prefWidth="134.0" />
       <TextArea fx:id="messageList" layoutX="14.0" layoutY="412.0" prefHeight="88.0" prefWidth="452.0" />
+      <TabPane fx:id="conversationTabPane" layoutX="148.0" layoutY="14.0" prefHeight="391.0" prefWidth="320.0" tabClosingPolicy="UNAVAILABLE" />
    </children>
 </AnchorPane>
