--- a/src/client/mainWindow/client.fxml
+++ b/src/client/mainWindow/client.fxml
@@ -4,9 +4,16 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.layout.BorderPane?>
 <AnchorPane prefHeight="544.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.mainWindow.ClientController">
    <children>
-      <ListView fx:id="contactsList" layoutX="14.0" layoutY="14.0" onMouseClicked="#ListViewMouseClicked" prefHeight="515.0" prefWidth="134.0" />
-      <TabPane fx:id="conversationTabPane" layoutX="148.0" layoutY="14.0" prefHeight="391.0" prefWidth="320.0" tabClosingPolicy="ALL_TABS" />
+       <BorderPane AnchorPane.leftAnchor="8" AnchorPane.rightAnchor="8" AnchorPane.topAnchor="8" AnchorPane.bottomAnchor="8">
+           <left>
+               <ListView fx:id="contactsList" layoutX="14.0" layoutY="14.0" onMouseClicked="#ListViewMouseClicked" prefHeight="515.0" prefWidth="134.0" />
+           </left>
+           <center>
+               <TabPane fx:id="conversationTabPane" layoutX="148.0" layoutY="14.0" prefHeight="391.0" prefWidth="320.0" tabClosingPolicy="ALL_TABS" />
+           </center>
+       </BorderPane>
    </children>
 </AnchorPane>
