--- a/src/client/mainWindow/tab.fxml
+++ b/src/client/mainWindow/tab.fxml
@@ -10,7 +10,7 @@
 <Tab fx:id="conversationTab" xmlns="http://javafx.com/javafx" fx:controller="client.mainWindow.TabController" xmlns:fx="http://javafx.com/fxml" text="">
     <BorderPane>
         <center>
-            <TextArea editable="false"/>
+            <TextArea fx:id="messagesArea" editable="false"/>
         </center>
         <bottom>
             <HBox spacing="10">
