--- a/src/client/mainWindow/tab.fxml
+++ b/src/client/mainWindow/tab.fxml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TextArea?>
@@ -6,19 +8,18 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<?import javafx.geometry.Insets?>
-<Tab fx:id="conversationTab" xmlns="http://javafx.com/javafx" fx:controller="client.mainWindow.TabController" xmlns:fx="http://javafx.com/fxml" text="">
+<Tab fx:id="conversationTab" onCloseRequest="#OnClosing" text="" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.mainWindow.TabController">
     <BorderPane>
         <center>
-            <TextArea fx:id="messagesArea" editable="false"/>
+            <TextArea fx:id="messagesArea" editable="false" />
         </center>
         <bottom>
             <HBox spacing="10">
                 <padding>
-                    <Insets top="10"/>
+                    <Insets top="10" />
                 </padding>
-                <TextField fx:id="sendMessageTextField" HBox.hgrow="ALWAYS" onAction="#SendMessageAction"/>
-                <Button fx:id="sendButton" text="Send" defaultButton="true" onAction="#SendMessageAction"/>
+                <TextField fx:id="sendMessageTextField" onAction="#SendMessageAction" HBox.hgrow="ALWAYS" />
+                <Button fx:id="sendButton" defaultButton="true" onAction="#SendMessageAction" text="Send" />
             </HBox>
         </bottom>
     </BorderPane>
