--- a/src/client/mainWindow/client.fxml
+++ b/src/client/mainWindow/client.fxml
@@ -6,6 +6,7 @@
 
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.geometry.Insets?>
+<?import java.net.URL?>
 <AnchorPane prefHeight="544.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.mainWindow.ClientController">
    <children>
        <BorderPane AnchorPane.leftAnchor="8" AnchorPane.rightAnchor="8" AnchorPane.topAnchor="8" AnchorPane.bottomAnchor="8">
@@ -21,4 +22,7 @@
            </center>
        </BorderPane>
    </children>
+    <stylesheets>
+        <URL value="@clientStyle.css" />
+    </stylesheets>
 </AnchorPane>
