--- a/src/client/mainWindow/tab.fxml
+++ b/src/client/mainWindow/tab.fxml
@@ -3,15 +3,15 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
+<?import javafx.scene.control.ListView?>
 <Tab fx:id="conversationTab" onCloseRequest="#OnClosing" text="" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.mainWindow.TabController">
     <BorderPane>
         <center>
-            <TextArea fx:id="messagesArea" editable="false" />
+            <ListView fx:id="messagesArea"/>
         </center>
         <bottom>
             <HBox spacing="10">
